; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_telemetry.c_bootprofile_get.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_telemetry.c_bootprofile_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bootprofile_buffer = common dso_local global i64 0, align 8
@bootprofile_buffer_current_position = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bootprofile_get(i8** %0, i32* %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i32*, align 8
  store i8** %0, i8*** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = call i32 (...) @BOOTPROFILE_LOCK()
  %6 = load i64, i64* @bootprofile_buffer, align 8
  %7 = inttoptr i64 %6 to i8*
  %8 = load i8**, i8*** %3, align 8
  store i8* %7, i8** %8, align 8
  %9 = load i32, i32* @bootprofile_buffer_current_position, align 4
  %10 = load i32*, i32** %4, align 8
  store i32 %9, i32* %10, align 4
  %11 = call i32 (...) @BOOTPROFILE_UNLOCK()
  ret void
}

declare dso_local i32 @BOOTPROFILE_LOCK(...) #1

declare dso_local i32 @BOOTPROFILE_UNLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
